# weighted-matching-benchmark

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: cost_distribution.rs  cross_category.rs  rectangular.rs  scaling_with_density.rs  scaling_with_size_dense.rs  scaling_with_size_sparse.rs
scripts/: plot.py
src/: lib.rs
tests/: correctness.rs
